<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoCoupon">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:weightSum="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- NOME AZIENDA -->
            <TableRow android:layout_weight="6">

                <TextView
                    android:fontFamily="sans-serif-black"
                    android:text="@string/azienda"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lbl_nomeAzienda"
                    android:text=""
                    android:textSize="16sp" />

            </TableRow>

            <!-- CODICE -->
            <TableRow android:layout_weight="6">

                <TextView
                    android:fontFamily="sans-serif-black"
                    android:text="@string/codice"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lbl_codice"
                    android:text=""
                    android:textSize="16sp" />
            </TableRow>

            <!-- SCADENZA -->
            <TableRow android:layout_weight="6">

                <TextView
                    android:fontFamily="sans-serif-black"
                    android:text="@string/scadenza"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lbl_scadenza"
                    android:text=""
                    android:textSize="16sp" />
            </TableRow>

            <!-- CODICE SCANSIONABILE -->
            <TableRow android:layout_weight="6">

                <TextView
                    android:fontFamily="sans-serif-black"
                    android:text="@string/codice_scansionabile"
                    android:textSize="16sp" />
            </TableRow>

            <!-- IMG CODICE -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_weight="6"
                android:gravity="center_vertical|center_horizontal">

                <ImageView
                    android:id="@+id/img_qr"
                    android:layout_width="160dp"
                    android:layout_height="114dp"
                    android:textAlignment="center"
                    app:srcCompat="@android:drawable/ic_menu_crop" />

            </TableRow>

            <!-- POSIZIONE -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_weight="6">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_vertical"
                        android:text="@string/posizioni"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/lbl_posizioni"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textSize="16sp" />

                    <LinearLayout
                        android:id="@+id/layout_btnMostraMappa"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_mappa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="0dp"
                            android:padding="4dp"
                            app:icon="@android:drawable/ic_dialog_map"
                            app:iconPadding="0dp" />

                    </LinearLayout>

                </LinearLayout>

            </TableRow>

            <!-- LISTA POSIZIONI -->
            <TableRow android:layout_weight="64">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ListView
                        android:id="@+id/list_posizioni"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/item_width"
                        android:layout_weight="1" />

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </RelativeLayout>

    <!-- BTN MODIFICA -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_modificaCoupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/btn_modificaCoupon_desc"
        android:src="@android:drawable/ic_menu_edit"
        app:fabSize="normal" />

    <!-- BTN ELIMINA -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_eliminaCoupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/btn_eliminaCoupon_desc"
        android:src="@android:drawable/ic_menu_delete"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|end" />

</RelativeLayout>